--- a/src/main/views/macro/summaryTable.njk
+++ b/src/main/views/macro/summaryTable.njk
@@ -1,30 +1,37 @@
-
 {% macro evidenceSummary(evidence) %}
   <table class="mobile-table">
-    <tr>
-      <th class="bold-small">{{ t('Type') }}</th>
-      <th class="bold-small">{{ t('Description') }}</th>
-    </tr>
-    {% for evidenceRow in evidence %}
+    <thead>
       <tr>
-        <td>{{ evidenceRow.type.displayValue }}</td>
-        <td>{{ evidenceRow.description | default('') }}</td>
+        <th class="bold-small tcol-half-width">{{ t('Type') }}</th>
+        <th class="bold-small tcol-half-width">{{ t('Description') }}</th>
       </tr>
-    {% endfor %}
+    </thead>
+    <tbody>
+      {% for evidenceRow in evidence %}
+        <tr>
+          <td>{{ evidenceRow.type.displayValue }}</td>
+          <td>{{ evidenceRow.description | default('') }}</td>
+        </tr>
+      {% endfor %}
+    </tbody>
   </table>
 {% endmacro %}
 
 {% macro timelineSummary(timeline) %}
   <table class="mobile-table">
-    <tr>
-      <th class="bold-small">{{ t('Date') }}</th>
-      <th class="bold-small">{{ t('What happened') }}</th>
-    </tr>
-    {% for timelineRow in timeline %}
+    <thead>
       <tr>
-        <td>{{ timelineRow.date }}</td>
-        <td>{{ timelineRow.description }}</td>
+        <th class="bold-small tcol-half-width">{{ t('Date') }}</th>
+        <th class="bold-small tcol-half-width">{{ t('What happened') }}</th>
       </tr>
-    {% endfor %}
+    </thead>
+    <tbody>
+      {% for timelineRow in timeline %}
+        <tr>
+          <td>{{ timelineRow.date }}</td>
+          <td>{{ timelineRow.description }}</td>
+        </tr>
+      {% endfor %}
+    </tbody>
   </table>
 {% endmacro %}
