--- a/src/main/features/dashboard/views/macro/claimStatus/admissionByCCJDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/admissionByCCJDefendant.njk
@@ -1,7 +1,7 @@
 {% from "internalLink.njk" import internalLink %}
 {% from "externalLink.njk" import externalLink %}
 {% from "form.njk" import linkButton %}
-{% from "./utilityMacros.njk" import downloadResponseLink %}
+{% from "./utilityMacros.njk" import downloadResponseLink, admissionByCCJCommonInfoClaimDetails %}
 
 {% macro admissionByCCJDefendantDashboard(claim) %}
   {{ t('{{ claimantName }} requested a County Court Judgment against you', { claimantName: claim.claimData.claimant.name }) }}
@@ -78,12 +78,3 @@
   </div>
 {% endmacro %}
 
-{% macro admissionByCCJCommonInfoClaimDetails(claim) %}
-  <p>{{ t('When we’ve processed the request we’ll post a copy of the judgment to you and to {{ claimantName }}.', { claimantName: claim.claimData.claimant.name }) }}</p>
-  <p>{{ t('If you pay the debt within one month of the date of judgment, the CCJ is removed from the public register. You can pay £15 to ' +
-      externalLink('apply for a certificate', 'https://www.gov.uk/government/publications/form-n443-application-for-a-certificate-of-satisfaction-or-cancellation') +
-      ' that confirms this.') | safe }}</p>
-  <p>{{ t(internalLink('Contact ' + claim.claimData.claimant.name, DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId })) +
-      ' if you need their payment details. Make sure you get receipts for any payments.') | safe }}</p>
-  <p>{{ downloadResponseLink(claim) }}</p>
-{% endmacro %}
