--- a/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementDefendant.njk
@@ -1,4 +1,3 @@
-{% from "form.njk" import csrfProtection, submitButton %}
 {% from "internalLink.njk" import internalLink %}
 {% from "./utilityMacros.njk" import downloadResponseLink, signAgreementLink, downloadAgreementLink %}
 
@@ -28,18 +27,17 @@
 {% macro settlementAgreementSignedByBothDefendantClaimDetails(claim) %}
   <div class="status-block">
     <h2 class="heading-small">{{ t('You’ve both signed a settlement agreement') }}</h2>
-    {% set paymentIntention = claim.settlement.getLastOffer().paymentIntention %}
-    {% if paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+    {% if claim.settlement.getLastOffer().paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
       <p>{{ t('The agreement says you’ll repay {{ amount }} by {{ paymentDate }}.',
           { amount: amountToPay,
             paymentDate: paymentIntention.paymentDate | date })
         }}</p>
-    {% elif paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+    {% elif claim.settlement.getLastOffer().paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
       <p>{{ t('The agreement says you’ll repay {{ instalmentAmount }} {{ paymentSchedule }} starting {{ firstPaymentDate }}.',
           {
-            instalmentAmount: paymentIntention.repaymentPlan.instalmentAmount | numeral,
-            paymentSchedule: paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule | lower,
-            firstPaymentDate: paymentIntention.repaymentPlan.firstPaymentDate | date
+            instalmentAmount: claim.settlement.getLastOffer().paymentIntention.repaymentPlan.instalmentAmount | numeral,
+            paymentSchedule: claim.settlement.getLastOffer().paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule | lower,
+            firstPaymentDate: claim.settlement.getLastOffer().paymentIntention.repaymentPlan.firstPaymentDate | date
           }) }}</p>
     {% endif %}
     <p>{{ t('The claimant can’t request a County Court Judgment against you unless you break the terms.') }}</p>
