Change content of buttons and use default value across the site

--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -152,7 +152,7 @@
           <input type="hidden" name="action[showPage]" value="{{ page + 1 }}">
         {% endif %}
 
-        {{ submitButton('Continue') }}
+        {{ submitButton() }}
       </form>
 
     </div>
