--- a/src/main/features/first-contact/views/claim-reference.njk
+++ b/src/main/features/first-contact/views/claim-reference.njk
@@ -14,7 +14,7 @@
         {{ csrfProtection(csrf) }}
 
         {{ claimReferenceInput('Claim number', 'reference', form) }}
-        {{ submitButton('Continue') }}
+        {{ submitButton() }}
       </form>
     </div>
   </div>
