--- a/src/main/features/offer/views/response.njk
+++ b/src/main/features/offer/views/response.njk
@@ -44,7 +44,7 @@
           ]
         )
       }}
-      {{ submitButton('Continue') }}
+      {{ submitButton() }}
       </form>
     </div>
   </div>
