--- a/src/main/features/response/views/statement-of-means/intro.njk
+++ b/src/main/features/response/views/statement-of-means/intro.njk
@@ -13,7 +13,7 @@
         <p>{{ t('We’ll ask you for the details then we’ll send them to {{ claimantName }} to review.', { claimantName: claimantFullName }) }}</p>
         <p>{{ t('They can reject your proposal if they believe you can pay sooner.') }}</p>
         <p>{{ t('If they reject your proposal, the court will make a new plan using your financial details.') }}</p>
-        {{ submitButton('Continue') }}
+        {{ submitButton() }}
       </form>
     </div>
   </div>
