--- a/src/main/features/eligibility/views/claim-value.njk
+++ b/src/main/features/eligibility/views/claim-value.njk
@@ -1,5 +1,5 @@
 {% extends "layout.njk" %}
-{% from "form.njk" import csrfProtection, errorSummary, radioGroup, saveAndContinueButton %}
+{% from "form.njk" import csrfProtection, errorSummary, radioGroup, submitButton %}
 
 {% set heading = 'Total amount you’re claiming' %}
 {% set additionalInformation = t('If you’re claiming interest, include that in the amount.') %}
@@ -47,7 +47,7 @@
         )
         }}
 
-        {{ saveAndContinueButton() }}
+        {{ submitButton() }}
 
       </form>
     </div>
