--- a/src/main/features/eligibility/views/single-defendant.njk
+++ b/src/main/features/eligibility/views/single-defendant.njk
@@ -1,5 +1,5 @@
 {% extends "layout.njk" %}
-{% from "form.njk" import csrfProtection, errorSummary, radioGroup, saveAndContinueButton %}
+{% from "form.njk" import csrfProtection, errorSummary, radioGroup, submitButton %}
 
 {% set heading = 'Is this claim against more than one person or organisation?' %}
 
@@ -28,7 +28,7 @@
           )
         }}
 
-        {{ saveAndContinueButton() }}
+        {{ submitButton() }}
 
       </form>
     </div>
