--- a/src/main/features/mediation/views/how-mediation-works.njk
+++ b/src/main/features/mediation/views/how-mediation-works.njk
@@ -28,7 +28,7 @@
         {{ csrfProtection(csrf) }}
 
         <div class="form-group">
-          {{ submitButton('Continue') }}
+          {{ submitButton() }}
         </div>
       </form>
     </div>
