--- a/src/main/features/response/views/send-company-financial-details.njk
+++ b/src/main/features/response/views/send-company-financial-details.njk
@@ -14,7 +14,7 @@
         <p>{{ t('You need to send {{ claimantName }} your company or organisation’s most recent statement of accounts.', { claimantName: claimantFullName }) }}</p>
         <p>{{ t('They’ll review your accounts and can reject your suggested repayment plan if they believe you can pay sooner.') }}</p>
         <p>{{ t('If they reject your plan, the court will make a new plan based on your financial details.') }}</p>
-        {{ submitButton('Continue') }}
+        {{ submitButton() }}
         {{ internalLink( t('Get {{ claimantName }}’s contact details.', { claimantName: claimantFullName }),
         claimantDetailsPageURI ) }}
       </form>
