--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -217,7 +217,7 @@
           changeLink = ClaimantResponsePaths.rejectionReasonPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
       {% endif %}
 
-      {% if claim.response.freeMediation === YesNoOption.YES.option and draft.freeMediation === YesNoOption.YES.option %}
+      {% if claim.response.freeMediation === YesNoOption.YES.option and draft.accepted.accepted.option === YesNoOption.NO.option %}
         {{ freeMediationBlock(claim, mediationDraft, contactPerson, contactNumber, mediationPilot, mediationEnabled) }}
       {% else %}
         {{ tableEnd() }}
