--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -50,7 +50,7 @@
         bold = true
       ) }}
     {% endif %}
-    {% if directionsQuestionnaireDraft.exceptionalCircumstances.exceptionalCircumstances.option === 'no' %}
+    {% if directionsQuestionnaireDraft.exceptionalCircumstances.exceptionalCircumstances.option === YesNoOption.YES.option %}
       {{ row(
         label = 'Briefly explain your reasons',
         value = directionsQuestionnaireDraft.exceptionalCircumstances.reason,
